# ChangeLog for dev-java/slf4j-api
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/ChangeLog,v 1.19 2013/11/30 09:41:28 ercpe Exp $

*slf4j-api-1.7.5 (30 Nov 2013)

  30 Nov 2013; Johann Schmitz <ercpe@gentoo.org> +files/1.7.5-build.xml,
  +slf4j-api-1.7.5.ebuild:
  Updated slf4j-api to 1.7.5

  08 Dec 2012; Agostino Sarubbo <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for ppc64, wrt bug #441172

  07 Dec 2012; Agostino Sarubbo <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for ppc, wrt bug #441172

  07 Dec 2012; <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for x86, wrt bug #441172

  07 Dec 2012; <ago@gentoo.org> slf4j-api-1.6.6.ebuild:
  Stable for amd64, wrt bug #441172

*slf4j-api-1.6.6 (03 Aug 2012)

  03 Aug 2012; Vlastimil Babka <caster@gentoo.org>
  +files/slf4j-api_maven-build.xml, +slf4j-api-1.6.6.ebuild:
  Version bump, bug #395639. Thanks to Ivan Baidakou <the.dmol@gmail.com> for
  the ebuild and build.xml base.

  17 Oct 2010; Vlastimil Babka <caster@gentoo.org> -slf4j-api-1.5.2.ebuild:
  Remove old.

  14 Oct 2010; Brent Baude <ranger@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable ppc, bug 316317

  26 May 2010; Pacho Ramos <pacho@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable amd64, bug 316317

  11 May 2010; Brent Baude <ranger@gentoo.org> slf4j-api-1.5.11.ebuild:
  stable ppc64, bug 316317

  11 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  slf4j-api-1.5.11.ebuild:
  x86 stable wrt bug #316317

*slf4j-api-1.5.11 (20 Mar 2010)

  20 Mar 2010; Petteri Räty <betelgeuse@gentoo.org>
  +slf4j-api-1.5.11.ebuild:
  Version bump. Fixes bug #309455.

  19 Jul 2009; nixnut <nixnut@gentoo.org> slf4j-api-1.5.2.ebuild:
  ppc stable #258723

  23 Jan 2009; Brent Baude <ranger@gentoo.org> slf4j-api-1.5.2.ebuild:
  Marking slf4j-api-1.5.2 ppc64 for bug 253054

  10 Jan 2009; Markus Meier <maekke@gentoo.org> slf4j-api-1.5.2.ebuild:
  amd64/x86 stable, bug #253054
