@@ -10,4 +10,4 @@ RDEPEND=>=virtual/jre-1.5 >=dev-java/java-config-2.1.9-r1 source? ( app-arch/zip
 SLOT=0
 SRC_URI=http://www.slf4j.org/dist/slf4j-1.7.5.tar.gz
 _eclasses_=eutils	40081e8c7e7f7c4f9db349a1d6d52925	java-ant-2	8f79fa38524086d2b7d4e9cd442ca6cc	java-pkg-2	65bbb59987d777c1106ae8aa4bf36e7b	java-utils-2	8d0d93b7a8605ea346cce4604f6db516	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	versionator	a8a3963967d6140be9a14b08bb8f047f
-_md5_=5b2741bd8315a29ba7ac2ae34e9122b8
+_md5_=14cb1734ceea78d008641834f0abdf98
