@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/slf4j-api
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/ChangeLog,v 1.19 2013/11/30 09:41:28 ercpe Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-java/slf4j-api/ChangeLog,v 1.20 2014/03/11 04:15:19 radhermit Exp $
+
+*slf4j-api-1.7.5-r1 (11 Mar 2014)
+
+  11 Mar 2014; Tim Harder <radhermit@gentoo.org> -slf4j-api-1.7.5.ebuild,
+  +slf4j-api-1.7.5-r1.ebuild, files/1.7.5-build.xml:
+  Properly remove stub classes that shouldn't be in the built jar.
 
 *slf4j-api-1.7.5 (30 Nov 2013)
 
